<resources>
    <string name="app_name">WGU Android</string>
    <string name="delete_reset">Reset all Information</string>
    <string name="WelcomeString">Welcome to the WGU Progress Application!</string>
    <string name="terms">Terms</string>
    <string name="title_activity_terms">Terms</string>
    <string name="are_you_sure">Are you sure you want to delete everything?</string>
    <string name="are_you_sure_term">Are you sure you want to delete this term?</string>
    <string name="are_you_sure_course">Are you sure you want to delete this course?</string>
    <string name="are_you_sure_assessment">Are you sure you want to delete this assessment?</string>
    <string name="all_deleted">All Information Reset</string>
    <string name="term_deleted">Term Deleted</string>
    <string name="course_deleted">Course Deleted</string>
    <string name="assessment_deleted">Assessment Deleted</string>
    <string name="termName">Term Name</string>
    <string name="add_term">Add Term</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_term_information">Add Term Information</string>
    <string name="title_activity_courses">Courses</string>
    <string name="add_course_information">Add Course Information</string>
    <string name="delete">Delete</string>
    <string name="title_activity_assessments">Assessments</string>
    <string name="add_assessment_information">Add assessment Information</string>
    <string name="goal_date">Goal Date</string>
    <string name="notes">Notes</string>
    <string name="course_name">Course Name:</string>
    <string name="mentor_number">Mentor Number:</string>
    <string name="mentor_email">Mentor Email:</string>
    <string name="mentor_name">Mentor Name:</string>
    <string name="term_name">Term name</string>
    <string name="course_mentor">Course Mentor: </string>
    <string name="emptyNumber">##########</string>
    <string name="emptyEmail">noemail@default.com</string>
    <string name="not_assigned">Not assigned</string>
    <string name="course_progress">Course Progress:</string>
    <string name="assessments">Assessments</string>
    <string name="note_saved">Note Saved!</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="courses">Courses</string>
    <string name="edit_term">Edit Term</string>
    <string name="termCourses">TermCourses</string>
    <string name="delete_term">Delete Term</string>
    <string name="courseAssessments">CourseAssessments</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="assessment_info">Assessment Info</string>
    <string name="edit_term_information">Edit Term Information</string>
    <string name="edit_course_information">Edit Course Information</string>
    <string name="cant_delete_term">Can\'t delete Term until courses are deleted!</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="start_date_alarm">Start Date Alarm</string>
    <string name="alarm_on_off">Alarm On/Off</string>
    <string name="end_date_alarm">End Date Alarm</string>
    <string name="alarm">Alarm</string>
    <string-array name="progress_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to take</item>
    </string-array>
</resources>
