<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wguandroid.TermInfo">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit"
        android:orderInCategory="99"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notes"
        android:icon="@drawable/note"
        android:orderInCategory="98"
        android:title="@string/notes"
        app:showAsAction="always" />

</menu>
